--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "i18next": "^23.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "styled-components": "^6.1.8"
